Viewport contents rect should exclude scrollbar size.

the scrollbars are attached to the visual viewport but created by (and have space saved by) the
frame view. So we need to exclude them from the container rect but also from the contents rect
because we don't want to be able to scroll into the region saved for scrollbars.

Bug: 855074
Test: All/PaintPropertyTreeUpdateTest.ViewportContentsAndContainerRectsDoNotIncludeScrollbar/*
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I4ea231f1a656f35094a2c388076bc2fdd61086da
Reviewed-on: https://chromium-review.googlesource.com/1183526
Commit-Queue: Sahel Sharify <sahel@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584827}
Former-commit-id: 605cc1f42d865005ce76620eda5b46fd9c18e287