third_party/blink/renderer/core/frame/visual_viewport.cc
@@ -129,7 +129,8 @@ void VisualViewport::UpdatePaintPropertyNodes(
   {
     ScrollPaintPropertyNode::State state;
     state.container_rect = IntRect(IntPoint(), ExcludeScrollbars(size_));
-    state.contents_rect = IntRect(IntPoint(), ContentsSize());
+    state.contents_rect =
+        IntRect(IntPoint(), ExcludeScrollbars(ContentsSize()));
 
     state.user_scrollable_horizontal =
         UserInputScrollable(kHorizontalScrollbar);
